--- a/index.html
+++ b/index.html
@@ -8,59 +8,79 @@
 </head>
 <body>
     <header>
-        <img src="images/logo_baner.jpg" alt="Cilok Baa Logo" class="logo">
-        <h1>CILOK BAA</h1>
+        <!-- Removed the img and h1 tags, as the background image will be used -->
     </header>
-    <section class="description">
-        <h2>Deskripsi</h2>
-        <p>Motivasi membangun cilokba adalah untuk memenuhi kebutuhan keluarga, Cilok Baa berdiri pada tahun 2020.</p>
-    </section>
-    <section class="address">
-        <h2>Alamat</h2>
-        <p>Kompleks Jl. Yudhasari II No.9b, Kalikoa, Kec. Kedawung, Kabupaten, Jawa Barat 45131.</p>
-    </section>
-    <section class="contact">
-        <h2>Kontak Person/WA</h2>
-        <p>0823-1893-5000</p>
-    </section>
-    <section class="social-media">
-        <h2>Sosmed</h2>
+    <nav>
         <ul>
-            <li><a href="https://www.instagram.com/cilokbacirebon?igsh=MXQwNWl6eGxtcXh1aQ==" target="_blank">Instagram</a></li>
-            <li><a href="https://www.tiktok.com/@cilokbacirebon?_t=8nfqmeqHVJp&_r=1" target="_blank">TikTok</a></li>
+            <li><a href="#description">Deskripsi</a></li>
+            <li><a href="#address">Alamat</a></li>
+            <li><a href="#contact">Kontak</a></li>
+            <li><a href="#social-media">Sosmed</a></li>
+            <li><a href="#vision-mission">Visi dan Misi</a></li>
+            <li><a href="#online-order">Order Online</a></li>
+            <li><a href="#maps">Maps</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#certificate">Sertifikat Halal</a></li>
+            <li><a href="#order-online-banner">Pesan Online</a></li>
         </ul>
-    </section>
-    <section class="vision-mission">
-        <h2>Visi dan Misi</h2>
-        <p>Visi Misi cilokba adalah menjadikan cilok makanan kekinian dan dapat dinikmati oleh semua kalangan.</p>
-    </section>
-    <section class="online-order">
-        <h2>Order Online</h2>
-        <ul>
-            <li><a href="https://r.grab.com/g/6-20240702_090246_e6c7126ca4d7dfdc_MEXMPS-6-C2DGLLJUWEEXFE" target="_blank">GrabFood</a></li>
-            <li><a href="https://gofood.link/a/zpaasPW" target="_blank">GoFood</a></li>
-        </ul>
-    </section>
-    <section class="maps">
-        <h2>Maps</h2>
-        <a href="https://maps.app.goo.gl/jWhFbt84QjVRk2GSA?g_st=iw" target="_blank">Google Maps</a>
-    </section>
-    <section class="menu">
-        <h2>Menu</h2>
-        <div class="menu-images">
-            <img src="images/cilok_bakso_bumbukacang.jpg" alt="Cilok Bakso Bumbu Kacang">
-            <img src="images/cilok_bakso_mie.jpg" alt="Cilok Bakso Mie">
-            <img src="images/cilok_bakso_kuah.jpg" alt="Cilok Bakso Kuah">
-            <img src="images/menu.jpg" alt="Menu">
-        </div>
-    </section>
-    <section class="certificate">
-        <h2>Sertifikat Halal</h2>
-        <img src="images/sertifhalal.jpg" alt="Sertifikat Halal">
-    </section>
-    <section class="order-online-banner">
-        <h2>Pesan Online</h2>
-        <img src="images/pesan_online.jpg" alt="Pesan Online">
-    </section>
+    </nav>
+    <main>
+        <section id="description" class="description">
+            <h2>Deskripsi</h2>
+            <p>Motivasi membangun cilokba adalah untuk memenuhi kebutuhan keluarga, Cilok Baa berdiri pada tahun 2020.</p>
+        </section>
+        <section id="address" class="address">
+            <h2>Alamat</h2>
+            <p>Kompleks Jl. Yudhasari II No.9b, Kalikoa, Kec. Kedawung, Kabupaten, Jawa Barat 45131.</p>
+        </section>
+        <section id="contact" class="contact">
+            <h2>Kontak Person/WA</h2>
+            <p>0823-1893-5000</p>
+        </section>
+        <section id="social-media" class="social-media">
+            <h2>Sosmed</h2>
+            <ul>
+                <li><a href="https://www.instagram.com/cilokbacirebon?igsh=MXQwNWl6eGxtcXh1aQ==" target="_blank">Instagram</a></li>
+                <li><a href="https://www.tiktok.com/@cilokbacirebon?_t=8nfqmeqHVJp&_r=1" target="_blank">TikTok</a></li>
+            </ul>
+        </section>
+        <section id="vision-mission" class="vision-mission">
+            <h2>Visi dan Misi</h2>
+            <p>Visi Misi cilokba adalah menjadikan cilok makanan kekinian dan dapat dinikmati oleh semua kalangan.</p>
+        </section>
+        <section id="online-order" class="online-order">
+            <h2>Order Online</h2>
+            <ul>
+                <li><a href="https://r.grab.com/g/6-20240702_090246_e6c7126ca4d7dfdc_MEXMPS-6-C2DGLLJUWEEXFE" target="_blank">GrabFood</a></li>
+                <li><a href="https://gofood.link/a/zpaasPW" target="_blank">GoFood</a></li>
+            </ul>
+        </section>
+        <section id="maps" class="maps">
+            <h2>Maps</h2>
+            <a href="https://maps.app.goo.gl/jWhFbt84QjVRk2GSA?g_st=iw" target="_blank">Google Maps</a>
+        </section>
+        <section id="menu" class="menu">
+            <h2>Menu</h2>
+            <div class="menu-images">
+                <img src="images/cilok_bakso_bumbukacang.jpg" alt="Cilok Bakso Bumbu Kacang">
+                <img src="images/cilok_bakso_mie.jpg" alt="Cilok Bakso Mie">
+                <img src="images/cilok_bakso_kuah.jpg" alt="Cilok Bakso Kuah">
+                <img src="images/menu.jpg" alt="Menu">
+            </div>
+        </section>
+        <section id="certificate" class="certificate">
+            <h2>Sertifikat Halal</h2>
+            <img src="images/sertifhalal.jpg" alt="Sertifikat Halal">
+        </section>
+        <section id="order-online-banner" class="order-online-banner">
+            <h2>Pesan Online</h2>
+            <img src="images/pesan_online.jpg" alt="Pesan Online">
+        </section>
+    </main>
+    <button id="back-to-top" title="Back to top">↑</button>
+    <footer>
+        <p>&copy; 2024 Cilok Baa. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
