--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head profile="http://dublincore.org/documents/dcq-html/">
     <meta name="X-UA-Compatible" content="IE=10; IE=9; IE=8; IE=7; IE=EDGE" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="content-language" content="en-us" />
-    <meta name="robots" content="all,index,follow" />
+    <meta name="llbots" content="all,index,follow" />
     <meta name="googlebot" content="all,index,follow" />
     <meta name="allow-search" content="yes" />
     <meta name="audience" content="all" />
@@ -38,11 +37,10 @@
     <link href="data/css/style.css" type="text/css" rel="stylesheet" />
     <title>Home - Sumber Selera</title>
 </head>
-
 <body id="home">
     <div class="container top-menu">
         <nav class="navbar navbar-expand-lg navbar-light"> <a class="navbar-brand d-inline-block d-lg-none"
-                href="index.html"><img src="data/images/logo.png"></a> <button class="navbar-toggler" type="button"
+                href="index.html"><img src="images/logo_baner_transparan.png"></a> <button class="navbar-toggler" type="button"
                 data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,8 +49,8 @@
                     <li class="nav-item "> <a class="nav-link" href="tentangkami.html">Tentang Kami</a> </li>
                     <li class="nav-item "> <a class="nav-link" href="produk.html">Produk</a> </li>
                     <li class="nav-item "> <a class="nav-link" href="promo.html">Promo & Acara</a> </li>
-                </ul> <a class="navbar-brand d-none d-lg-inline-block mx-auto" href="index.html"><img
-                        src="data/images/logo.png"></a>
+                </ul> <a class="navbar-brand d-none d-lg-inline-block mx-auto" href="index.html">
+                    <img src="images/logo_baner_transparan.png"></a>
                 <ul class="navbar-nav nav-justified">
                     <li class="nav-item "> <a class="nav-link" href="berita.html">Berita & Artikel</a> </li>
                     <li class="nav-item "> <a class="nav-link" href="tips.html">Tips</a> </li>
@@ -64,11 +62,11 @@
     <section class="banner">
         <div class="banner-slide default-setting">
             <div class="banner-item default-item">
-                <div class="d-none d-lg-block">
+                <div class="    d-none d-lg-block">
                     <div align="center" class="embed-responsive embed-responsive-16by9"> <video id='my-video'
                             class='video-js embed-responsive-item' style="width: 100%; height: auto;"
                             data-setup='{ "controls": false, "preload": "auto" }' autoplay loop muted>
-                            <source src='data/upload/images/18c131ded3dc06c029544da5b5ee7412.mp4' type='video/mp4'>
+                            <source src='data/upload/images/baner.mp4' type='video/mp4'>
                             <p class='vjs-no-js'> To view this video please enable JavaScript, and consider upgrading to
                                 a web browser that <a href='https://videojs.com/html5-video-support/'
                                     target='_blank'>supports HTML5 video</a> </p>
