--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body id="home">
     <div class="container top-menu">
         <nav class="navbar navbar-expand-lg navbar-light"> <a class="navbar-brand d-inline-block d-lg-none"
-                href="index.html"><img src="images/logo_baner_transparan.png"></a> <button class="navbar-toggler" type="button"
+                href="index.html"><img src="images/logo_baner.jpg"></a> <button class="navbar-toggler" type="button"
                 data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
             </button>
@@ -50,7 +50,7 @@
                     <li class="nav-item "> <a class="nav-link" href="produk.html">Produk</a> </li>
                     <li class="nav-item "> <a class="nav-link" href="promo.html">Promo & Acara</a> </li>
                 </ul> <a class="navbar-brand d-none d-lg-inline-block mx-auto" href="index.html">
-                    <img src="images/logo_baner_transparan.png"></a>
+                    <img src="images/logo_baner.jpg"></a>
                 <ul class="navbar-nav nav-justified">
                     <li class="nav-item "> <a class="nav-link" href="berita.html">Berita & Artikel</a> </li>
                     <li class="nav-item "> <a class="nav-link" href="tips.html">Tips</a> </li>
@@ -80,11 +80,8 @@
                             <div class="col-xl-5 col-lg-6 col-md-12">
                                 <div class="content wow fadeIn" data-wow-duration="2s" data-wow-delay="0s">
                                     <div class="text">
-                                        <h3><strong>Pakarnya Bakso Sapi Sejak 1989</strong></h3>
-                                        <p>Bakso Sumber Selera bermula dari industri rumahan<br />yang berada di Kebon
-                                            Jeruk, Jakarta Barat. <br />Seiring dengan meningkatnya permintaan
-                                            masyarakat<br />akan produk bakso sapi, Sumber Selera
-                                            berkembang<br />menjadi PT (Perseroan Terbatas) dan industri pabrik.</p>
+                                        <h3><strong>Cilok Baa</strong></h3>
+                                        <p>Motivasi membangun cilokba adalah untuk memenuhi kebutuhan keluarga, Cilok Baa berdiri pada tahun 2020.</p>
                                     </div>
                                     <div class="link wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s"> <a
                                             href="tentangkami.html" class="btn btn-white">Baca Selengkapnya</a> </div>
@@ -103,11 +100,8 @@
                     <div class="heading-wrapper text-center">
                         <div class="heading"> Produk Terbaik Kami </div>
                         <div class="text wow fadeIn" data-wow-duration="2s" data-wow-delay="0s">
-                            <p>Bakso Sumber Selera memiliki berbagai macam varian produk. Salah satu produk yang unggul
-                                di mata konsumen adalah produk Bakso Sumber Selera SB. Produk Bakso Sapi SB telah
-                                menjadi produk Bakso Best Seller yang sudah di produksi sejak tahun 1989. Di tahun 2020,
-                                produk Bakso Sumber Selera berganti kemasan sehinggu Bakso SB kini menjadi Bakso SB
-                                Premium.</p>
+                            <p>Cilok Baa memiliki berbagai macam varian produk. 
+                                Salah satu produk yang unggul di mata konsumen adalah produk Cilok Baa Bakso.</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +111,19 @@
                             <div class="col-md-4 product-col">
                                 <div class="product-item">
                                     <div class="image wow fadeIn" data-wow-duration="2s" data-wow-delay="0s"> <img
-                                            src="data/upload/images/646f1f99b45af3afc6ca4460b14c0e7a.png"> </div>
+                                            src="images/cilok_bakso_bumbukacang.jpg"> </div>
+                                    <div class="title wow fadeIn" data-wow-duration="2s" data-wow-delay="1.25s"> Bakso
+                                        Sapi </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-wrapper">
+                        <div class="row">
+                            <div class="col-md-4 product-col">
+                                <div class="product-item">
+                                    <div class="image wow fadeIn" data-wow-duration="2s" data-wow-delay="0s"> <img
+                                            src="images/cilok_bakso_bumbukacang.jpg"> </div>
                                     <div class="title wow fadeIn" data-wow-duration="2s" data-wow-delay="1.25s"> Bakso
                                         Sapi </div>
                                 </div>
