--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#menu">Menu</a></li>
                     <li><a href="#tentang">Tentang Kami</a></li>
                     <li><a href="#contact">Kontak Kami</a></li>
+                    <li><a href="profile.html">Profile Owner</a></li>
                 </ul>
             </nav>
         </div>
