--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                         <p>Cilok dengan bakso dan kuah spesial.</p>
                     </div>
                 </div>
+                <div class="menu-item">
+                    <img src="images/cilok_bakso_cili_oil.jpg" alt="Cilok Bakso Cili Oil">
+                    <div class="menu-item-content">
+                        <h3>Cilok Bakso Cili Oil</h3>
+                        <p>Cilok dengan tambahan bakso dan bumbu cili oil yang pedas.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
