ganti profil owner

--- a/profile.html
+++ b/profile.html
@@ -32,25 +32,11 @@
         <div class="w-full">
             <h2 class="text-4xl font-semibold text-gray-800 text-center">Bayu Setyawan</h2>
             <div class="mt-4 text-zinc-400 flex justify-start">
-                <strong class="w-32">Alamat</strong> <span class="mr-2">:</span>jln. Sabrang permai blok a4 no.35B,kalikoa
-            </div>
-            <div class="mt-4 text-zinc-400 flex justify-start">
-                <strong class="w-32">TTL</strong> <span class="mr-2">:</span>Sukoharjo,19 desember 1987
-            </div>
-            <div class="mt-2 text-zinc-400 flex justify-start">
-                <strong class="w-32">Status</strong> <span class="mr-2">:</span> Menikah
-            </div>
-            <div class="mt-2 text-zinc-400 flex justify-start">
-                <strong class="w-32">Pendidikan</strong> <span class="mr-2">:</span> S1
-            </div>
-            <div class="mt-2 text-zinc-400 flex justify-start">
-                <strong class="w-32">Pengalaman</strong> <span class="mr-2">:</span>
-                <ul class="list-disc ml-8">
-                    <li>Back office progress claim asuransi kendaraan sinarmas (2012-2013)</li>
-                    <li>Marketing PT. Surya Madistrindo (Gudang Garam) tahun 2013</li>
-                    <li>Senior surveyor claim asuransi kendaraan pan pacific (2014-2016)</li>
-                    <li>Pengelola penggilingan daging UD. Baja Pak Min (2016-sekarang)</li>
-                </ul>
+                <p class="text-justify">
+                    Bayu Setyawan membangun Cilok Baa untuk memenuhi kebutuhan keluarganya dan mewujudkan 
+                    visi menjadikan cilok makanan kekinian yang dapat dinikmati oleh semua kalangan, dengan latar 
+                    belakang pendidikan S1 dan pengalaman kerja yang beragam, Cilok Baa berdiri pada tahun 2020.
+                </p>
             </div>
         </div>
     </div>
