--- a/index.html
+++ b/index.html
@@ -30,37 +30,42 @@
         <div class="container">
             <h2 class="section-title">Menu Kami</h2>
             <div class="menu-container">
-                <div class="menu-item">
-                    <img src="images/cilok_bakso_bumbukacang.jpg" alt="Cilok Bakso Bumbu Kacang">
-                    <div class="menu-item-content">
-                        <h3>Cilok Bakso Bumbu Kacang</h3>
-                        <p>Cilok dengan tambahan bakso dan bumbu kacang yang gurih.</p>
+                <div class="menu-row">
+                    <div class="menu-item">
+                        <img src="images/cilok_bakso_bumbukacang.jpg" alt="Cilok Bakso Bumbu Kacang">
+                        <div class="menu-item-content">
+                            <h3>Cilok Bakso Bumbu Kacang</h3>
+                            <p>Cilok dengan tambahan bakso dan bumbu kacang yang gurih.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <img src="images/cilok_bakso_mie.jpg" alt="Cilok Bakso Mie">
+                        <div class="menu-item-content">
+                            <h3>Cilok Bakso Mie</h3>
+                            <p>Cilok disajikan dengan bakso dan mie dalam kuah yang lezat.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item">
-                    <img src="images/cilok_bakso_mie.jpg" alt="Cilok Bakso Mie">
-                    <div class="menu-item-content">
-                        <h3>Cilok Bakso Mie</h3>
-                        <p>Cilok disajikan dengan bakso dan mie dalam kuah yang lezat.</p>
+                <div class="menu-row">
+                    <div class="menu-item">
+                        <img src="images/cilok_bakso_kuah.jpg" alt="Cilok Bakso Kuah">
+                        <div class="menu-item-content">
+                            <h3>Cilok Bakso Kuah</h3>
+                            <p>Cilok dengan bakso dan kuah spesial.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item">
-                    <img src="images/cilok_bakso_kuah.jpg" alt="Cilok Bakso Kuah">
-                    <div class="menu-item-content">
-                        <h3>Cilok Bakso Kuah</h3>
-                        <p>Cilok dengan bakso dan kuah spesial.</p>
-                    </div>
-                </div>
-                <div class="menu-item">
-                    <img src="images/cilok_bakso_cili_oil.jpg" alt="Cilok Bakso Cili Oil">
-                    <div class="menu-item-content">
-                        <h3>Cilok Bakso Cili Oil</h3>
-                        <p>Cilok dengan tambahan bakso dan bumbu cili oil yang pedas.</p>
+                    <div class="menu-item">
+                        <img src="images/cilok_bakso_cili_oil.jpg" alt="Cilok Bakso Cili Oil">
+                        <div class="menu-item-content">
+                            <h3>Cilok Bakso Cili Oil</h3>
+                            <p>Cilok dengan tambahan bakso dan bumbu cili oil yang pedas.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    
 
     <section class="menu-image">
         <div class="container">
